hack/kcp/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-service
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: webhook-server-cert
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 9443
  selector:
    control-plane: controller-manager
